# LLM_Local

./: .gitignore  ChatFunctions.py  ChatSQL.py  D1_Ollama.py  D1_Ollama_RAG.py  D2_HF.py  D3_HF_DS.py  D4_HF_Gemma.py  LICENSE  TryGemma.py  prompts.txt  pyproject.toml
